<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_page"
        android:title="@string/menu_pages"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/action_search_light"
        android:orderInCategory="200"
        android:showAsAction="collapseActionView|never"
		android:actionViewClass="android.widget.SearchView" />
    
	<item
		android:id="@+id/share"
		android:title="@string/menu_share"
		android:icon="@android:drawable/ic_menu_share"
		android:orderInCategory="300"
		android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_create"
        android:title="@string/menu_create"
        android:icon="@drawable/content_edit_light"
        android:orderInCategory="400"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_preferences"
        android:title="@string/menu_preferences"
        android:icon="@drawable/action_settings_light"
        android:orderInCategory="500"
        android:showAsAction="never" />

</menu>
